Link to Linkedin Addes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
 <footer class="footer fixed-bottom text-center py-3">
   <p class="mb-0">
     Built by 
-    <span class="footer-name">Yahia Ghallale</span>
+    <span onclick="window.location.href='https://www.linkedin.com/in/yahia-ghallale-09ba0a2a8/?originalSubdomain=it'" class="footer-name">Yahia Ghallale</span>
   </p>
   <p class="footer-links mb-0">
     <a href="https://github.com/yahiag04" target="_blank" class="footer-link">GitHub</a> ·
